tests/baselines/reference/asyncGenerators.objectLiteralMethod.7.es2017.errors.txt
tests/cases/conformance/asyncGenerators/es2017/objectLiteralMethods/asyncGenerators.objectLiteralMethod.7.es2017.ts(2,19): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es2017/objectLiteralMethods/asyncGenerators.objectLiteralMethod.7.es2017.ts (1 errors) ====
    const x = {
        async * f(a = yield) {}
                      ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    }